--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -737,6 +737,42 @@
     "# print the coordinates\n",
     "print(x3, y3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 17\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:PointTest:test_add2`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 17\n",
+    "\n",
+    "reload(ecc)\n",
+    "run(ecc.PointTest('test_add2'))"
+   ]
   }
  ],
  "metadata": {
