--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -503,6 +503,30 @@
     "\n",
     "# print the coordinates\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 17\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:PointTest:test_add2`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 17\n",
+    "\n",
+    "reload(ecc)\n",
+    "run(ecc.PointTest('test_add2'))"
+   ]
   }
  ],
  "metadata": {},
