fixes from las vegas
base58 using strings
reword instruction -> command
notebook reload issues fixed
changed sig_hash to be same as book
fixed spacing issues on jupyter

--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -11,8 +11,7 @@
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
     "from helper import run\n",
-    "import ecc, helper\n",
-    "from random import randint"
+    "import ecc, helper"
    ]
   },
   {
@@ -533,7 +532,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
