--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -11,8 +11,7 @@
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
     "from helper import run\n",
-    "import ecc, helper\n",
-    "from random import randint"
+    "import ecc, helper"
    ]
   },
   {
