--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -11,9 +11,7 @@
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
     "from helper import run\n",
-    "import ecc, helper\n",
-    "from ecc import FieldElement, G, Point, S256Point\n",
-    "from helper import encode_base58, hash160, hash256, little_endian_to_int"
+    "import ecc, helper"
    ]
   },
   {
@@ -67,6 +65,7 @@
    "source": [
     "# Exercise 1\n",
     "\n",
+    "from ecc import FieldElement, Point\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
@@ -183,21 +182,21 @@
     "additions = ((192, 105, 17, 56), (47, 71, 117, 141), (143, 98, 76, 66))\n",
     "# iterate over the additions to be done\n",
     "for x1_raw, y1_raw, x2_raw, y2_raw in additions:\n",
-    "   # Initialize points this way:\n",
-    "   # x1 = FieldElement(x1_raw, prime)\n",
-    "   # y1 = FieldElement(y1_raw, prime)\n",
-    "   # p1 = Point(x1, y1, a, b)\n",
-    "   # x2 = FieldElement(x2_raw, prime)\n",
-    "   # y2 = FieldElement(y2_raw, prime)\n",
-    "   # p2 = Point(x2, y2, a, b)\n",
-    "   x1 = FieldElement(x1_raw, prime)\n",
-    "   y1 = FieldElement(y1_raw, prime)\n",
-    "   p1 = Point(x1, y1, a, b)\n",
-    "   x2 = FieldElement(x2_raw, prime)\n",
-    "   y2 = FieldElement(y2_raw, prime)\n",
-    "   p2 = Point(x2, y2, a, b)\n",
-    "   # print p1+p2\n",
-    "   print('{} + {} = {}'.format(p1, p2, p1+p2))"
+    "    # Initialize points this way:\n",
+    "    # x1 = FieldElement(x1_raw, prime)\n",
+    "    # y1 = FieldElement(y1_raw, prime)\n",
+    "    # p1 = Point(x1, y1, a, b)\n",
+    "    # x2 = FieldElement(x2_raw, prime)\n",
+    "    # y2 = FieldElement(y2_raw, prime)\n",
+    "    # p2 = Point(x2, y2, a, b)\n",
+    "    x1 = FieldElement(x1_raw, prime)\n",
+    "    y1 = FieldElement(y1_raw, prime)\n",
+    "    p1 = Point(x1, y1, a, b)\n",
+    "    x2 = FieldElement(x2_raw, prime)\n",
+    "    y2 = FieldElement(y2_raw, prime)\n",
+    "    p2 = Point(x2, y2, a, b)\n",
+    "    # print p1+p2\n",
+    "    print('{} + {} = {}'.format(p1, p2, p1+p2))"
    ]
   },
   {
@@ -303,21 +302,21 @@
     "multiplications = ((2, 192, 105), (2, 143, 98), (2, 47, 71), (4, 47, 71), (8, 47, 71), (21, 47, 71))\n",
     "# iterate over the multiplications\n",
     "for n, x_raw, y_raw in multiplications:\n",
-    "   # Initialize points this way:\n",
-    "   # x = FieldElement(x_raw, prime)\n",
-    "   # y = FieldElement(y_raw, prime)\n",
-    "   # p = Point(x, y, a, b)\n",
-    "   x = FieldElement(x_raw, prime)\n",
-    "   y = FieldElement(y_raw, prime)\n",
-    "   p = Point(x, y, a, b)\n",
-    "   # start product at 0 (point at infinity)\n",
-    "   product = Point(None, None, a, b)\n",
-    "   # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
-    "   for _ in range(n):\n",
-    "       # add the point to the product\n",
-    "       product = product + p\n",
-    "   # print product\n",
-    "   print(product)"
+    "    # Initialize points this way:\n",
+    "    # x = FieldElement(x_raw, prime)\n",
+    "    # y = FieldElement(y_raw, prime)\n",
+    "    # p = Point(x, y, a, b)\n",
+    "    x = FieldElement(x_raw, prime)\n",
+    "    y = FieldElement(y_raw, prime)\n",
+    "    p = Point(x, y, a, b)\n",
+    "    # start product at 0 (point at infinity)\n",
+    "    product = Point(None, None, a, b)\n",
+    "    # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
+    "    for _ in range(n):\n",
+    "        # add the point to the product\n",
+    "        product = product + p\n",
+    "    # print product\n",
+    "    print(product)"
    ]
   },
   {
@@ -488,8 +487,8 @@
     }
    ],
    "source": [
-    "from ecc import G\n",
     "# Confirming order of G is n\n",
+    "from ecc import G\n",
     "n = 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEBAAEDCE6AF48A03BBFD25E8CD0364141\n",
     "print(n*G)"
    ]
@@ -508,8 +507,8 @@
     }
    ],
    "source": [
-    "from ecc import G\n",
     "# Getting the public point from a secret\n",
+    "from ecc import G\n",
     "secret = 999\n",
     "point = secret*G\n",
     "print(point)"
@@ -577,7 +576,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.059s\n",
+      "Ran 1 test in 0.058s\n",
       "\n",
       "OK\n"
      ]
@@ -605,8 +604,8 @@
     }
    ],
    "source": [
-    "from ecc import S256Point\n",
     "# SEC Example\n",
+    "from ecc import S256Point\n",
     "point = S256Point(0x5CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC, 0x6AEBCA40BA255960A3178D6D861A54DBA813D0B813FDE7B5A5082628087264DA)\n",
     "uncompressed = b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')\n",
     "print(uncompressed.hex())\n",
@@ -652,19 +651,19 @@
     "secrets = (999**3, 123, 42424242)\n",
     "# iterate through secrets\n",
     "for secret in secrets:\n",
-    "   # get public point\n",
-    "   point = secret * G\n",
-    "   # uncompressed - b'\\x04' followed by x coord, then y coord\n",
-    "   # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
-    "   uncompressed = b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')\n",
-    "   # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
-    "   if point.y.num % 2 == 1:\n",
-    "       compressed = b'\\x03' + point.x.num.to_bytes(32, 'big')\n",
-    "   else:\n",
-    "       compressed = b'\\x02' + point.x.num.to_bytes(32, 'big')\n",
-    "   # print the .hex() of both\n",
-    "   print(uncompressed.hex())\n",
-    "   print(compressed.hex())"
+    "    # get public point\n",
+    "    point = secret * G\n",
+    "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
+    "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
+    "    uncompressed = b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')\n",
+    "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
+    "    if point.y.num % 2 == 1:\n",
+    "        compressed = b'\\x03' + point.x.num.to_bytes(32, 'big')\n",
+    "    else:\n",
+    "        compressed = b'\\x02' + point.x.num.to_bytes(32, 'big')\n",
+    "    # print the .hex() of both\n",
+    "    print(uncompressed.hex())\n",
+    "    print(compressed.hex())"
    ]
   },
   {
@@ -690,7 +689,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.017s\n",
+      "Ran 1 test in 0.015s\n",
       "\n",
       "OK\n"
      ]
@@ -712,13 +711,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'19ZewH8Kk1PDbSNdJ97FP4EiCjTRaZMZQA'\n"
+      "19ZewH8Kk1PDbSNdJ97FP4EiCjTRaZMZQA\n"
      ]
     }
    ],
    "source": [
-    "from helper import encode_base58, hash160, hash256\n",
     "# Address Example\n",
+    "from helper import encode_base58, hash160, hash256\n",
     "sec = bytes.fromhex('025CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC')\n",
     "h160 = hash160(sec)\n",
     "raw = b'\\x00' + h160\n",
@@ -769,22 +768,22 @@
     ")\n",
     "# iterate through components\n",
     "for secret, compressed in components:\n",
-    "   # get the public point\n",
-    "   point = secret * G\n",
-    "   # get the sec format\n",
-    "   sec = point.sec(compressed)\n",
-    "   # hash160 the result\n",
-    "   h160 = hash160(sec)\n",
-    "   # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
-    "   for prefix in (b'\\x00', b'\\x6f'):\n",
-    "       # raw is the prefix + h160\n",
-    "       raw = prefix + h160\n",
-    "       # get the hash256 of the raw, first 4 bytes are the checksum\n",
-    "       checksum = hash256(raw)[:4]\n",
-    "       # append checksum\n",
-    "       total = raw + checksum\n",
-    "       # encode_base58 the whole thing\n",
-    "       print(encode_base58(total).decode('ascii'))"
+    "    # get the public point\n",
+    "    point = secret * G\n",
+    "    # get the sec format\n",
+    "    sec = point.sec(compressed)\n",
+    "    # hash160 the result\n",
+    "    h160 = hash160(sec)\n",
+    "    # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
+    "    for prefix in (b'\\x00', b'\\x6f'):\n",
+    "        # raw is the prefix + h160\n",
+    "        raw = prefix + h160\n",
+    "        # get the hash256 of the raw, first 4 bytes are the checksum\n",
+    "        checksum = hash256(raw)[:4]\n",
+    "        # append checksum\n",
+    "        total = raw + checksum\n",
+    "        # encode_base58 the whole thing\n",
+    "        print(encode_base58(total))"
    ]
   },
   {
@@ -884,6 +883,7 @@
     "# Exercise 15\n",
     "\n",
     "from ecc import G\n",
+    "from helper import little_endian_to_int, hash256\n",
     "# use a passphrase\n",
     "passphrase = b'Jimmy Song'\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
