--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -11,9 +11,7 @@
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
     "from helper import run\n",
-    "import ecc, helper\n",
-    "from ecc import FieldElement, G, Point, S256Point\n",
-    "from helper import encode_base58, hash160, hash256, little_endian_to_int"
+    "import ecc, helper"
    ]
   },
   {
@@ -47,6 +45,7 @@
    "source": [
     "# Exercise 1\n",
     "\n",
+    "from ecc import FieldElement, Point\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
@@ -132,20 +131,20 @@
     "additions = ((192, 105, 17, 56), (47, 71, 117, 141), (143, 98, 76, 66))\n",
     "# iterate over the additions to be done\n",
     "\n",
-    "   # Initialize points this way:\n",
-    "   # x1 = FieldElement(x1_raw, prime)\n",
-    "   # y1 = FieldElement(y1_raw, prime)\n",
-    "   # p1 = Point(x1, y1, a, b)\n",
-    "   # x2 = FieldElement(x2_raw, prime)\n",
-    "   # y2 = FieldElement(y2_raw, prime)\n",
-    "   # p2 = Point(x2, y2, a, b)\n",
+    "    # Initialize points this way:\n",
+    "    # x1 = FieldElement(x1_raw, prime)\n",
+    "    # y1 = FieldElement(y1_raw, prime)\n",
+    "    # p1 = Point(x1, y1, a, b)\n",
+    "    # x2 = FieldElement(x2_raw, prime)\n",
+    "    # y2 = FieldElement(y2_raw, prime)\n",
+    "    # p2 = Point(x2, y2, a, b)\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "   # print p1+p2\n"
+    "    # print p1+p2\n"
    ]
   },
   {
@@ -218,20 +217,20 @@
     "multiplications = ((2, 192, 105), (2, 143, 98), (2, 47, 71), (4, 47, 71), (8, 47, 71), (21, 47, 71))\n",
     "# iterate over the multiplications\n",
     "\n",
-    "   # Initialize points this way:\n",
-    "   # x = FieldElement(x_raw, prime)\n",
-    "   # y = FieldElement(y_raw, prime)\n",
-    "   # p = Point(x, y, a, b)\n",
+    "    # Initialize points this way:\n",
+    "    # x = FieldElement(x_raw, prime)\n",
+    "    # y = FieldElement(y_raw, prime)\n",
+    "    # p = Point(x, y, a, b)\n",
     "\n",
     "\n",
     "\n",
-    "   # start product at 0 (point at infinity)\n",
+    "    # start product at 0 (point at infinity)\n",
     "\n",
-    "   # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
+    "    # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
     "\n",
-    "       # add the point to the product\n",
+    "        # add the point to the product\n",
     "\n",
-    "   # print product\n"
+    "    # print product\n"
    ]
   },
   {
@@ -337,8 +336,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ecc import G\n",
     "# Confirming order of G is n\n",
+    "from ecc import G\n",
     "n = 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEBAAEDCE6AF48A03BBFD25E8CD0364141\n",
     "print(n*G)"
    ]
@@ -349,8 +348,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ecc import G\n",
     "# Getting the public point from a secret\n",
+    "from ecc import G\n",
     "secret = 999\n",
     "point = secret*G\n",
     "print(point)"
@@ -379,9 +378,8 @@
     "\n",
     "secrets = (7, 1485, 2**128, 2**240+2**31)\n",
     "# iterate over secrets\n",
-    "for secret in secrets:\n",
-    "    # get the public point\n",
-    "    print(secret*G)"
+    "\n",
+    "    # get the public point\n"
    ]
   },
   {
@@ -414,8 +412,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ecc import S256Point\n",
     "# SEC Example\n",
+    "from ecc import S256Point\n",
     "point = S256Point(0x5CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC, 0x6AEBCA40BA255960A3178D6D861A54DBA813D0B813FDE7B5A5082628087264DA)\n",
     "uncompressed = b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')\n",
     "print(uncompressed.hex())\n",
@@ -448,17 +446,17 @@
     "secrets = (999**3, 123, 42424242)\n",
     "# iterate through secrets\n",
     "\n",
-    "   # get public point\n",
+    "    # get public point\n",
     "\n",
-    "   # uncompressed - b'\\x04' followed by x coord, then y coord\n",
-    "   # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
+    "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
+    "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
     "\n",
-    "   # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
-    "\n",
-    "\n",
+    "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
     "\n",
     "\n",
-    "   # print the .hex() of both\n",
+    "\n",
+    "\n",
+    "    # print the .hex() of both\n",
     "\n"
    ]
   },
@@ -492,8 +490,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from helper import encode_base58, hash160, hash256\n",
     "# Address Example\n",
+    "from helper import encode_base58, hash160, hash256\n",
     "sec = bytes.fromhex('025CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC')\n",
     "h160 = hash160(sec)\n",
     "raw = b'\\x00' + h160\n",
@@ -531,21 +529,21 @@
     ")\n",
     "# iterate through components\n",
     "\n",
-    "   # get the public point\n",
+    "    # get the public point\n",
     "\n",
-    "   # get the sec format\n",
+    "    # get the sec format\n",
     "\n",
-    "   # hash160 the result\n",
+    "    # hash160 the result\n",
     "\n",
-    "   # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
+    "    # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
     "\n",
-    "       # raw is the prefix + h160\n",
+    "        # raw is the prefix + h160\n",
     "\n",
-    "       # get the hash256 of the raw, first 4 bytes are the checksum\n",
+    "        # get the hash256 of the raw, first 4 bytes are the checksum\n",
     "\n",
-    "       # append checksum\n",
+    "        # append checksum\n",
     "\n",
-    "       # encode_base58 the whole thing\n"
+    "        # encode_base58 the whole thing\n"
    ]
   },
   {
@@ -613,6 +611,7 @@
     "# Exercise 15\n",
     "\n",
     "from ecc import G\n",
+    "from helper import little_endian_to_int, hash256\n",
     "# use a passphrase\n",
     "passphrase = b'<fill this in with your name and email>'\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
