--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -11,13 +11,7 @@
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
     "from helper import run\n",
-    "from math import ceil, log\n",
-    "import block, helper, network\n",
-    "from block import Block, GENESIS_BLOCK_HASH, TESTNET_GENESIS_BLOCK_HASH\n",
-    "from helper import hash256, merkle_parent, merkle_parent_level, merkle_root, read_varint\n",
-    "from merkleblock import MerkleTree\n",
-    "from network import GetDataMessage, GetHeadersMessage, HeadersMessage, SimpleNode, VerAckMessage, VersionMessage, BLOCK_DATA_TYPE\n",
-    "from tx import Tx"
+    "import block, helper, network"
    ]
   },
   {
@@ -193,7 +187,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.000s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -257,7 +251,7 @@
    ],
    "source": [
     "# Handshake Example\n",
-    "from network import SimpleNode, VersionMessage\n",
+    "from network import SimpleNode, VersionMessage, VerAckMessage\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True)\n",
     "version = VersionMessage()\n",
     "node.send(version)\n",
@@ -287,7 +281,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.088s\n",
+      "Ran 1 test in 0.087s\n",
       "\n",
       "OK\n"
      ]
@@ -334,6 +328,7 @@
    "source": [
     "# Block Header Download Example\n",
     "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
+    "from block import GENESIS_BLOCK_HASH\n",
     "node = SimpleNode('btc.programmingblockchain.com', testnet=False)\n",
     "node.handshake()\n",
     "last_block_hash = GENESIS_BLOCK_HASH\n",
@@ -395,6 +390,8 @@
    "source": [
     "# Exercise 8\n",
     "\n",
+    "from network import SimpleNode, GetHeadersMessage, HeadersMessage\n",
+    "from block import TESTNET_GENESIS_BLOCK_HASH\n",
     "# connect to tbtc.programmingblockchain.com\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True)\n",
     "# handshake\n",
@@ -443,6 +440,7 @@
    ],
    "source": [
     "# Merkle Parent Example\n",
+    "from helper import hash256\n",
     "tx_hash0 = bytes.fromhex('c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5')\n",
     "tx_hash1 = bytes.fromhex('c131474164b412e3406696da1ee20ab0fc9bf41c8f05fa8ceea7a08d672d7cc5')\n",
     "parent = hash256(tx_hash0+tx_hash1)\n",
@@ -477,6 +475,7 @@
    "source": [
     "# Exercise 9\n",
     "\n",
+    "from helper import hash256\n",
     "hex_hash1 = 'f391da6ecfeed1814efae39e7fcb3838ae0b02c02ae7d0a5848a66947c0727b0'\n",
     "hex_hash2 = '3d238a92a94532b946c90e19c49351c763696cff3db400485b813aecb8a13181'\n",
     "# bytes.fromhex to get the bin hashes\n",
@@ -592,6 +591,7 @@
    "source": [
     "# Exercise 11\n",
     "\n",
+    "from helper import merkle_parent\n",
     "hex_hashes = [\n",
     "    '8b30c5ba100f6f2e5ad1e2a742e5020491240f8eb514fe97c713c31718ad7ecd',\n",
     "    '7f4e6f9e224e20fda0ae4c44114237f97cd35aca38d83081c9bfd41feb907800',\n",
@@ -725,6 +725,7 @@
    "source": [
     "# Exercise 13\n",
     "\n",
+    "from helper import merkle_parent_level\n",
     "hex_hashes = [\n",
     "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
     "    '94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4',\n",
@@ -858,6 +859,7 @@
    "source": [
     "# Exercise 15\n",
     "\n",
+    "from helper import merkle_root\n",
     "want = '4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301'\n",
     "tx_hex_hashes = [\n",
     "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
@@ -903,7 +905,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.000s\n",
       "\n",
       "OK\n"
      ]
@@ -944,6 +946,8 @@
    "source": [
     "# Exercise 17\n",
     "\n",
+    "from network import SimpleNode, GetDataMessage, BLOCK_DATA_TYPE\n",
+    "from block import Block\n",
     "block_hex = '0000000000044b01a9440b34f582fe171c7b8642fedd0ebfccf8fdf6a1810900'\n",
     "block_hash = bytes.fromhex(block_hex)\n",
     "# connect to tbtc.programmingblockchain.com on testnet\n",
@@ -987,6 +991,7 @@
    ],
    "source": [
     "# Merkle Tree Example\n",
+    "from math import ceil, log\n",
     "total = 16\n",
     "max_depth = ceil(log(total, 2))\n",
     "merkle_tree = []\n",
@@ -1017,6 +1022,7 @@
    ],
    "source": [
     "# Merkle Tree Populating and Navigating Example\n",
+    "from merkleblock import MerkleTree\n",
     "hex_hashes = [\n",
     "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
     "    \"5573c8ede34936c29cdfdfe743f7f5fdfbd4f54ba0705259e62f39917065cb9b\",\n",
@@ -1063,6 +1069,7 @@
    ],
    "source": [
     "# Merkle Tree Populating Example #2\n",
+    "from merkleblock import MerkleTree\n",
     "hex_hashes = [\n",
     "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
     "    \"5573c8ede34936c29cdfdfe743f7f5fdfbd4f54ba0705259e62f39917065cb9b\",\n",
@@ -1118,6 +1125,7 @@
    ],
    "source": [
     "# Merkle Tree Populating Example #3\n",
+    "from merkleblock import MerkleTree\n",
     "hex_hashes = [\n",
     "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
     "    \"5573c8ede34936c29cdfdfe743f7f5fdfbd4f54ba0705259e62f39917065cb9b\",\n",
