--- a/session5/session5.ipynb
+++ b/session5/session5.ipynb
@@ -11,12 +11,7 @@
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
     "from helper import run\n",
-    "from io import BytesIO\n",
-    "import helper, op, script, tx\n",
-    "from ecc import PrivateKey, S256Point, Signature\n",
-    "from helper import decode_base58, encode_base58_checksum, hash160, hash256, int_to_little_endian, SIGHASH_ALL\n",
-    "from script import p2pkh_script, Script\n",
-    "from tx import Tx, TxIn, TxOut"
+    "import helper, op, script, tx"
    ]
   },
   {
@@ -127,7 +122,8 @@
     "# Exercise 3\n",
     "\n",
     "from tx import Tx, TxIn, TxOut\n",
-    "from helper import hash256, little_endian_to_int\n",
+    "from helper import decode_base58, hash256, little_endian_to_int\n",
+    "from script import p2pkh_script\n",
     "prev_tx = bytes.fromhex('<transaction id here>')  # CHANGE\n",
     "prev_index = -1  # CHANGE\n",
     "target_address = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
@@ -169,7 +165,7 @@
     "if private_key.point.address(testnet=True) != change_address:\n",
     "    raise RuntimeError('Private Key does not correspond to Change Address, check priv_key and change_address')\n",
     "# SANITY CHECK: output's script_pubkey is the same one as your address\n",
-    "if tx_ins[0].script_pubkey(testnet=True).instructions[2] != decode_base58(change_address):\n",
+    "if tx_ins[0].script_pubkey(testnet=True).commands[2] != decode_base58(change_address):\n",
     "    raise RuntimeError('Output is not something you can spend with this private key. Check that the prev_tx and prev_index are correct')\n",
     "# SANITY CHECK: fee is reasonable\n",
     "if tx_obj.fee() > 0.05*100000000 or tx_obj.fee() <= 0:\n",
@@ -200,6 +196,9 @@
     "# Exercise 4\n",
     "\n",
     "# Bonus\n",
+    "from tx import Tx, TxIn, TxOut\n",
+    "from helper import decode_base58, hash256, little_endian_to_int\n",
+    "from script import p2pkh_script\n",
     "prev_tx_1 = bytes.fromhex('<tx id from last exercise>')  # CHANGE\n",
     "prev_index_1 = -1  # CHANGE\n",
     "prev_tx_2 = bytes.fromhex('<tx id from faucet>')  # CHANGE\n",
@@ -231,7 +230,7 @@
     "\n",
     "\n",
     "# SANITY CHECK: output's script_pubkey is the same one as your address\n",
-    "if tx_ins[0].script_pubkey(testnet=True).instructions[2] != decode_base58(private_key.point.address(testnet=True)):\n",
+    "if tx_ins[0].script_pubkey(testnet=True).commands[2] != decode_base58(private_key.point.address(testnet=True)):\n",
     "    raise RuntimeError('Output is not something you can spend with this private key. Check that the prev_tx and prev_index are correct')\n",
     "# SANITY CHECK: fee is reasonable\n",
     "if tx_obj.fee() > 0.05*100000000 or tx_obj.fee() <= 0:\n",
@@ -314,6 +313,7 @@
    "source": [
     "# Exercise 6\n",
     "\n",
+    "from helper import hash160\n",
     "hex_redeem_script = '5221022626e955ea6ea6d98850c994f9107b036b1334f18ca8830bfff1295d21cfdb702103b287eaf122eea69030a0e9feed096bed8045c8b98bec453e1ffac7fbdbd4bb7152ae'\n",
     "# bytes.fromhex script\n",
     "\n",
@@ -469,6 +469,11 @@
    "source": [
     "# Exercise 10\n",
     "\n",
+    "from io import BytesIO\n",
+    "from ecc import S256Point, Signature\n",
+    "from helper import int_to_little_endian, SIGHASH_ALL\n",
+    "from script import Script\n",
+    "from tx import Tx\n",
     "hex_sec = '03b287eaf122eea69030a0e9feed096bed8045c8b98bec453e1ffac7fbdbd4bb71'\n",
     "hex_der = '3045022100da6bee3c93766232079a01639d07fa869598749729ae323eab8eef53577d611b02207bef15429dcadce2121ea07f233115c6f09034c0be68db99980b9a6c5e754022'\n",
     "hex_redeem_script = '475221022626e955ea6ea6d98850c994f9107b036b1334f18ca8830bfff1295d21cfdb702103b287eaf122eea69030a0e9feed096bed8045c8b98bec453e1ffac7fbdbd4bb7152ae'\n",
