--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -11,16 +11,7 @@
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
     "from helper import run\n",
-    "from time import sleep\n",
-    "import bloomfilter, merkleblock\n",
-    "from block import Block\n",
-    "from bloomfilter import BloomFilter, BIP37_CONSTANT\n",
-    "from ecc import PrivateKey\n",
-    "from helper import bit_field_to_bytes, decode_base58, hash160, hash256, little_endian_to_int, murmur3, SIGHASH_ALL\n",
-    "from merkleblock import MerkleBlock\n",
-    "from network import GetDataMessage, GetHeadersMessage, HeadersMessage, SimpleNode, FILTERED_BLOCK_DATA_TYPE, TX_DATA_TYPE\n",
-    "from script import p2pkh_script\n",
-    "from tx import Tx, TxIn, TxOut"
+    "import bloomfilter, merkleblock"
    ]
   },
   {
@@ -30,6 +21,7 @@
    "outputs": [],
    "source": [
     "# Example Bloom Filter\n",
+    "from helper import hash256\n",
     "bit_field_size = 10\n",
     "bit_field = [0] * bit_field_size\n",
     "h256 = hash256(b'hello world')\n",
@@ -45,6 +37,7 @@
    "outputs": [],
    "source": [
     "# Example Bloom Filter 2\n",
+    "from helper import hash256\n",
     "bit_field_size = 10\n",
     "bit_field = [0] * bit_field_size\n",
     "h = hash256(b'hello world')\n",
@@ -63,6 +56,7 @@
    "outputs": [],
    "source": [
     "# Example Bloom Filter 3\n",
+    "from helper import hash160, hash256\n",
     "bit_field_size = 10\n",
     "bit_field = [0] * bit_field_size\n",
     "phrase1 = b'hello world'\n",
@@ -89,6 +83,8 @@
    "outputs": [],
    "source": [
     "# Example BIP0037 Bloom Filter\n",
+    "from helper import murmur3\n",
+    "from bloomfilter import BIP37_CONSTANT\n",
     "field_size = 2\n",
     "num_functions = 2\n",
     "tweak = 42\n",
@@ -122,6 +118,8 @@
    "source": [
     "# Exercise 1\n",
     "\n",
+    "from bloomfilter import BIP37_CONSTANT\n",
+    "from helper import murmur3, bit_field_to_bytes\n",
     "field_size = 10\n",
     "function_count = 5\n",
     "tweak = 99\n",
@@ -215,6 +213,11 @@
     "# Exercise 4\n",
     "\n",
     "from bloomfilter import BloomFilter\n",
+    "from ecc import PrivateKey\n",
+    "from helper import decode_base58, hash256, little_endian_to_int\n",
+    "from merkleblock import MerkleBlock\n",
+    "from network import SimpleNode, GetDataMessage, FILTERED_BLOCK_DATA_TYPE\n",
+    "from tx import Tx\n",
     "block_hash = bytes.fromhex('<block hash from class>')  # CHANGE\n",
     "passphrase = b'<your passphrase here>'  # CHANGE\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
@@ -295,7 +298,15 @@
    "source": [
     "# Exercise 6\n",
     "\n",
-    "from merkleblock import MerkleBlock, MerkleTree\n",
+    "from time import sleep\n",
+    "from block import Block\n",
+    "from bloomfilter import BloomFilter, BIP37_CONSTANT\n",
+    "from ecc import PrivateKey\n",
+    "from helper import bit_field_to_bytes, decode_base58, hash160, hash256, little_endian_to_int, murmur3, SIGHASH_ALL\n",
+    "from merkleblock import MerkleBlock\n",
+    "from network import GetDataMessage, GetHeadersMessage, HeadersMessage, SimpleNode, FILTERED_BLOCK_DATA_TYPE, TX_DATA_TYPE\n",
+    "from script import p2pkh_script\n",
+    "from tx import Tx, TxIn, TxOut\n",
     "last_block_hex = '<block hash from class>'  # CHANGE\n",
     "last_block = bytes.fromhex(last_block_hex)\n",
     "passphrase = b'<your passphrase here>'  # CHANGE\n",
