made s8 final easier

--- a/session8/complete/session8.ipynb
+++ b/session8/complete/session8.ipynb
@@ -412,48 +412,31 @@
     "addr = private_key.point.address(testnet=True)\n",
     "h160 = decode_base58(addr)\n",
     "target_address = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
-    "filter_size = 30\n",
-    "filter_num_functions = 5\n",
-    "filter_tweak = 90210\n",
     "target_h160 = decode_base58(target_address)\n",
     "target_script = p2pkh_script(target_h160)\n",
+    "bloom_filter = BloomFilter(30, 5, 90210)\n",
     "fee = 5000  # fee in satoshis\n",
     "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True)\n",
-    "# create a bloom filter using variables above\n",
-    "bf = BloomFilter(filter_size, filter_num_functions, filter_tweak)\n",
     "# add the h160 to the bloom filter\n",
-    "bf.add(h160)\n",
+    "bloom_filter.add(h160)\n",
     "# complete the handshake\n",
     "node.handshake()\n",
-    "# send the 'filterload' message\n",
-    "node.send(bf.filterload())\n",
+    "# send the 'filterload' message from the bloom filter\n",
+    "node.send(bloom_filter.filterload())\n",
     "# create GetHeadersMessage with the last_block as the start_block\n",
     "getheaders = GetHeadersMessage(start_block=last_block)\n",
     "# send a getheaders message\n",
     "node.send(getheaders)\n",
     "# wait for the headers message\n",
     "headers = node.wait_for(HeadersMessage)\n",
-    "# initialize the GetDataMessage\n",
-    "getdata = GetDataMessage()\n",
-    "# loop through the headers in the headers message\n",
-    "for header in headers.headers:\n",
-    "    # check that the proof of work on the block is valid\n",
-    "    if not header.check_pow():\n",
-    "        raise RuntimeError\n",
-    "    # check that this block's prev_block is the last block\n",
-    "    if last_block is not None and header.prev_block != last_block:\n",
-    "        raise RuntimeError\n",
-    "    # set the last block to the current hash\n",
-    "    last_block = header.hash()\n",
-    "    # add_data(FILTERED_BLOCK_DATA_TYPE, last_block) to get_data_message\n",
-    "    getdata.add_data(FILTERED_BLOCK_DATA_TYPE, last_block)\n",
-    "# send the getdata message\n",
-    "node.send(getdata)\n",
-    "# initialize prev_tx to None\n",
-    "prev_tx = None\n",
-    "# while prev_tx is None\n",
-    "while prev_tx is None:\n",
+    "# check that the headers are valid\n",
+    "if not headers.is_valid():\n",
+    "    raise RuntimeError\n",
+    "# get merkle block request from the headers message and send it\n",
+    "node.send(headers.merkle_block_request())\n",
+    "# while True\n",
+    "while True:\n",
     "    # wait for the merkleblock or tx commands\n",
     "    message = node.wait_for(MerkleBlock, Tx)\n",
     "    # if we have the merkleblock command\n",
@@ -463,18 +446,13 @@
     "            raise RuntimeError\n",
     "    # else we have the tx command\n",
     "    else:\n",
-    "        # set message.testnet=True\n",
-    "        message.testnet = True\n",
-    "        # loop through the enumerated tx outs (enumerate(message.tx_outs))\n",
-    "        for i, tx_out in enumerate(message.tx_outs):\n",
-    "            # if our output has the same address as our address (addr) we found it\n",
-    "            if tx_out.script_pubkey.address(testnet=True) == addr:\n",
-    "                # we found our utxo. set prev_tx, prev_index, prev_amount\n",
-    "                prev_tx = message.hash()\n",
-    "                prev_index = i\n",
-    "                prev_amount = tx_out.amount\n",
-    "                # break\n",
-    "                break\n",
+    "        # use find_utxos to get utxos that belong to our address\n",
+    "        utxos = message.find_utxos(addr)\n",
+    "        # if we have any utxos, break\n",
+    "        if len(utxos) > 0:\n",
+    "            break\n",
+    "# prev_tx, prev_index, prev_amount are what we get in each utxo\n",
+    "prev_tx, prev_index, prev_amount = utxos[0]\n",
     "# create tx_in\n",
     "tx_in = TxIn(prev_tx, prev_index)\n",
     "# calculate the output amount (prev_amount - fee)\n",
@@ -491,17 +469,8 @@
     "node.send(tx_obj)\n",
     "# wait a sec so this message goes through to the other node sleep(1)\n",
     "sleep(1)\n",
-    "# now ask for this transaction from the other node\n",
-    "# create a GetDataMessage\n",
-    "getdata = GetDataMessage()\n",
-    "# add_data (TX_DATA_TYPE, tx_obj.hash()) to get data message\n",
-    "getdata.add_data(TX_DATA_TYPE, tx_obj.hash())\n",
-    "# send the GetDataMessage\n",
-    "node.send(getdata)\n",
-    "# now wait for a response\n",
-    "got = node.wait_for(Tx)\n",
-    "if got.id() == tx_obj.id():\n",
-    "    # yes! we got to what we wanted\n",
+    "# now check to see if the tx has been accepted using is_tx_accepted()\n",
+    "if node.is_tx_accepted(tx_obj):\n",
     "    print('success!')\n",
     "    print(tx_obj.id())"
    ]
