--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -315,21 +315,17 @@
     "addr = private_key.point.address(testnet=True)\n",
     "h160 = decode_base58(addr)\n",
     "target_address = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
-    "filter_size = 30\n",
-    "filter_num_functions = 5\n",
-    "filter_tweak = -1  # CHANGE\n",
     "target_h160 = decode_base58(target_address)\n",
     "target_script = p2pkh_script(target_h160)\n",
+    "bloom_filter = BloomFilter(30, 5, 90210)\n",
     "fee = 5000  # fee in satoshis\n",
     "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
-    "\n",
-    "# create a bloom filter using variables above\n",
     "\n",
     "# add the h160 to the bloom filter\n",
     "\n",
     "# complete the handshake\n",
     "\n",
-    "# send the 'filterload' message\n",
+    "# send the 'filterload' message from the bloom filter\n",
     "\n",
     "# create GetHeadersMessage with the last_block as the start_block\n",
     "\n",
@@ -337,25 +333,12 @@
     "\n",
     "# wait for the headers message\n",
     "\n",
-    "# initialize the GetDataMessage\n",
-    "\n",
-    "# loop through the headers in the headers message\n",
-    "\n",
-    "    # check that the proof of work on the block is valid\n",
+    "# check that the headers are valid\n",
     "\n",
     "\n",
-    "    # check that this block's prev_block is the last block\n",
+    "# get merkle block request from the headers message and send it\n",
     "\n",
-    "\n",
-    "    # set the last block to the current hash\n",
-    "\n",
-    "    # add_data(FILTERED_BLOCK_DATA_TYPE, last_block) to get_data_message\n",
-    "\n",
-    "# send the getdata message\n",
-    "\n",
-    "# initialize prev_tx to None\n",
-    "\n",
-    "# while prev_tx is None\n",
+    "# while True\n",
     "\n",
     "    # wait for the merkleblock or tx commands\n",
     "\n",
@@ -366,17 +349,12 @@
     "\n",
     "    # else we have the tx command\n",
     "\n",
-    "        # set message.testnet=True\n",
+    "        # use find_utxos to get utxos that belong to our address\n",
     "\n",
-    "        # loop through the enumerated tx outs (enumerate(message.tx_outs))\n",
-    "\n",
-    "            # if our output has the same address as our address (addr) we found it\n",
-    "\n",
-    "                # we found our utxo. set prev_tx, prev_index, prev_amount\n",
+    "        # if we have any utxos, break\n",
     "\n",
     "\n",
-    "\n",
-    "                # break\n",
+    "# prev_tx, prev_index, prev_amount are what we get in each utxo\n",
     "\n",
     "# create tx_in\n",
     "\n",
@@ -394,17 +372,8 @@
     "\n",
     "# wait a sec so this message goes through to the other node sleep(1)\n",
     "\n",
-    "# now ask for this transaction from the other node\n",
-    "# create a GetDataMessage\n",
+    "# now check to see if the tx has been accepted using is_tx_accepted()\n",
     "\n",
-    "# add_data (TX_DATA_TYPE, tx_obj.hash()) to get data message\n",
-    "\n",
-    "# send the GetDataMessage\n",
-    "\n",
-    "# now wait for a response\n",
-    "\n",
-    "\n",
-    "    # yes! we got to what we wanted\n",
     "\n"
    ]
   }
